update home footer header

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -39,8 +39,8 @@ footer{
         .footer_front{
             width: 20%;
 
-            .logo img{
-                width: 78%;
+            .footer_logo img{
+                width: 80%;
                 vertical-align: bottom;
             }
 
