--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -289,7 +289,7 @@ header {
       .header_ticket_hover{
         position: absolute;
         top: 3px;
-        left: 1060px;
+        left: 70.5vw;
         width: 60px;
         height: 20px;
         overflow: hidden;
