--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -110,6 +110,10 @@ $Sidebar_icon_rigth: 70px;
   cursor: pointer;
   background-color: $bgColorWhite;
   color: $mainTextColor;
+  @media (width <= 768px) {
+    width: 100px;
+    height: 30px;
+  }
   &:hover {
     background-color: $primaryColorYellow;
   }
