--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -81,7 +81,7 @@ $time:10s;
         .pk_animal_icon{
             .pk_animal_default{
                 position: absolute;
-                @include mapicon-px-percentage-size(60px,60px);
+                @include mapicon-px-percentage-size(65px,65px);
                 transition: 0.3s;
                 img{
                     width: 100%;
@@ -248,9 +248,15 @@ $time:10s;
         .pk_Store_icon{
             .pk_Store_default{
                 position: absolute;
+                transition: 0.3s;
                 @include mapicon-px-percentage-size(75px,75px);
                 img{
                     width: 100%;
+                }
+                &:hover{
+                    transition: 0.3s;
+                    transform: scale(1.3);
+                    cursor: pointer;
                 }
             }
             .pk_Store_icon_VC1{
@@ -369,7 +375,7 @@ $time:10s;
                         color: $mainTextColor;
                     }
                     .pk_Tickets_item_location{
-                        bottom: 20.4%;
+                        bottom: 17.3%;
                     }
                     .pk_Tickets_item_hide{
                         display: none;
@@ -380,7 +386,7 @@ $time:10s;
         .pk_Origin{
             width: 100%;
             height: 100%;
-            margin: 2% 0;
+            margin: 2% 0 5%;
             position: relative;
             z-index: 5;
             img{
@@ -407,6 +413,7 @@ $time:10s;
         .pk_information{
             width: 74%;
             display: flex;
+            gap: 5px;
             .pk_information_bulletin_board{
                 width: 790px;
                 height: 875px;
@@ -424,13 +431,25 @@ $time:10s;
                     letter-spacing: 1px;
                 }
             }
-            .pk_information_img_Billboard{
+            .pk_information_Billboard{
                 width: 567px;
-                height: 883px;
+                height: 875px;
                 position: relative;
                 z-index: 10;
                 img{
                     width: 100%;
+                }
+                .pk_information_img_monkey{
+                    width: 255px;
+                    height: 235px;
+                    position: absolute;
+                    bottom: 0;
+                }
+                .pk_information_img_orangutan{
+                    width: 234px;
+                    height: 299px;
+                    position: absolute;
+                    bottom: 0;
                 }
             }
         }
@@ -449,11 +468,12 @@ $time:10s;
             top: 0;
             z-index: 3;
             .pk_content_bg_cloud_default{
+                width: 30%;
                 position: absolute;
                 bottom: 0;
             }
             .pk_content_bg_cloud1{
-                @include pk_cloud1(4.82%,42.7%,'cloud1-animation');
+                @include pk_cloud1(4.82%,38%,'cloud1-animation');
                 animation: cloud1-animation $time infinite;
             }
             .pk_content_bg_cloud2{
@@ -465,7 +485,7 @@ $time:10s;
                 animation: cloud3-animation $time+4 infinite;
             }
             .pk_content_bg_cloud4{
-                @include pk_cloud1(72.4%,83.3%,'cloud4-animation');
+                @include pk_cloud1(68%,83.3%,'cloud4-animation');
                 animation: cloud4-animation $time+3 infinite;
             }
             .pk_content_bg_cloud5{
